--- a/html_20.html
+++ b/html_20.html
@@ -6,7 +6,7 @@
     <title>Заболевания сердца</title>
     <meta name="description" content="The HTML5 sample">
     <meta name="author" content="from internet">
-    <link rel="stylesheet" href="css\s8.css">
+    <link rel="stylesheet" href="css\s9.css">
 </head>
 
 <body>
@@ -29,6 +29,13 @@
         </p>
     </nav>
     <main>
+        <aside>
+            <p>
+                Заболевания сердца (болезни сердца) — группа заболеваний, относящихся к сердечно-сосудистым, проявляющихся нарушением нормального функционирования сердца. Могут быть обусловлены поражением эпикарда, перикарда, миокарда, эндокарда, клапанного аппарата сердца, сосудов сердца.</p>
+        </aside>
+        <aside style="float:right">
+            <p>Заболевания сердца (болезни сердца) — группа заболеваний, относящихся к сердечно-сосудистым, проявляющихся нарушением нормального функционирования сердца. Могут быть обусловлены поражением эпикарда, перикарда, миокарда, эндокарда, клапанного аппарата сердца, сосудов сердца.</p>
+        </aside>
         <header>
             <h2>Виды</h2>
             <hr>
@@ -40,11 +47,7 @@
             </header>
             <section>
                 <h4>Сердечная аритмия</h4>
-                <p>Патологическое состояние, приводящее к нарушению частоты, 
-                    ритмичности и последовательности возбуждения и сокращения сердечной мышцы — миокарда. 
-                    Аритмия — любой ритм сердца, отличающийся от нормального синусового ритма.</p>
-                    <a href="#" class="myimage-ssilka">Для диагносики аритмии часто истопльзуют ЭКГ </a>
-                    <div class="myimage-div"><img src="image/ECG.jpg" alt="image" width="30%"><p> так как данное исследование позволяет определить тип, характер и тяжесть аритмии у пациента. При аритмии может существенно нарушаться нормальная сократительная активность сердца, что, в свою очередь, может привести к целому ряду серьёзных осложнений. Ритмичная работа сердца обеспечивается способностью специализированных клеток сердца вырабатывать потенциалы действия при отсутствии внешних раздражителей; такая способность возбудимых тканей в физиологии называется «автоматизмом». Правильным, или регулярным, синусовым ритмом принято называть ритм сердца, который в пределах наблюдения задаётся только активностью синусового узла. Правильный ритм синусового узла принято называть «нормальным синусовым ритмом», если он попадает в диапазон 60—90 ударов в минуту. Небольшие колебания периода сердечных сокращений, менее 0,1 секунды, считаются нормальной (физиологической) синусовой аритмией, связанной с естественной вариабельностью ритма сердца; их не считают патологическим нарушением ритма сердца.</p></div>
+                <p>Патологическое состояние, приводящее к нарушению частоты, ритмичности и последовательности возбуждения и сокращения сердечной мышцы — миокарда. Аритмия — любой ритм сердца, отличающийся от нормального синусового ритма. При таком патологическом состоянии может существенно нарушаться нормальная сократительная активность сердца, что, в свою очередь, может привести к целому ряду серьёзных осложнений. Ритмичная работа сердца обеспечивается способностью специализированных клеток сердца вырабатывать потенциалы действия при отсутствии внешних раздражителей; такая способность возбудимых тканей в физиологии называется «автоматизмом». Правильным, или регулярным, синусовым ритмом принято называть ритм сердца, который в пределах наблюдения задаётся только активностью синусового узла. Правильный ритм синусового узла принято называть «нормальным синусовым ритмом», если он попадает в диапазон 60—90 ударов в минуту. Небольшие колебания периода сердечных сокращений, менее 0,1 секунды, считаются нормальной (физиологической) синусовой аритмией, связанной с естественной вариабельностью ритма сердца; их не считают патологическим нарушением ритма сердца.</p>
             </section>
             <section>
                 <h4>Атриовентрикулярная блокада</h4>
@@ -53,8 +56,6 @@
             <section>
                 <h4>Блокада ножек пучка Гиса</h4>
                 <p>Ножки пучка Гиса являются элементом проводящей системы сердца. Они отвечают за проведение электрического возбуждения по желудочкам сердца. Пучок Гиса разделяется на две ножки: правая направляется к правому желудочку, а левая — к левому, где распределяется на переднюю и заднюю ветви. Задняя ветвь идёт вниз, она толще остальных и является как бы продолжением общего ствола, далее от общего ствола отделяется вначале правая, а затем и левая передняя ветвь (отвечает за передне-левый отдел межжелудочковой перегородки и передне-боковую стенку левого желудочка). Задняя ветвь отвечает за задне-левый отдел межжелудочковой перегородки и заднюю (нижнюю) стенку левого желудочка. Между передней и задней ветвями левой ножки пучка Гиса имеется сеть анастомозов. Исходя из строения ветвей пучка Гиса различают однопучковые, двухпучковые и трехпучковые блокады. При любом виде однопучковой блокады комплекс QRS расширен незначительно, его ширина остаётся в пределах верхней границы нормы или слегка увеличивается (0,08 — 0,11 сек.) При полной блокаде правой ножки Гиса, однако, он может быть расширен до 0,12 сек. и более.</p>
-                <a href="#" class="myimage-ssilka">ЭКГ диагностика</a>
-                <div class="myimage-div"><img src="image/11.jpg" alt="image" width="30%"><p>Q I, V6, RIII или rIII, rV1, в V1 часто регистрируется зазубрина — комплекс имеет вид rSR'. ЭОС отклонена вправо. Широкий S в I, V6, высокий и широкий R' в V1. Желудочковый комплекс имеет вид qRS с широким S в отведениях I, aVL, V6, возможно и в V4, V5 и форму rSR' или rR' в отведениях V1, III, реже в V2 и aVF. QRS расширен до 0,12 и более.</p>
             </section>
             <section>
                 <h4>Фибрилляция</h4>
@@ -63,13 +64,6 @@
             <section>
                 <h4>Экстрасистолия</h4>
                 <p>Экстрасистола — внеочередное преждевременное сердечное сокращение, деполяризация (изменение МПП) и сокращение сердца или отдельных его камер, наиболее часто регистрируемый вид аритмий. Экстрасистолы можно обнаружить у 60—70 % людей. В основном они носят функциональный (нейрогенный) характер, их появление провоцируют стресс, курение, алкоголь, крепкий чай и особенно кофе. Однако новые исследования показывают, что кофеин в большинстве случаев не связан с возникновением нарушений ритма, а в некоторых случаях он даже защищает от их возникновения. Экстрасистолы органического происхождения возникают при повреждении миокарда (ишемическая болезнь сердца, кардиосклероз, дистрофия, воспаление). Внеочередной импульс может исходить из предсердий, предсердно-желудочкового соединения и желудочков. Возникновение экстрасистол объясняют появлением эктопического очага триггерной активности, а также существованием механизма reentry. Временные взаимоотношения внеочередного и нормального комплексов характеризует интервал сцепления.</p>
-                <a href="#" class="myimage-ssilka">Классификация</a>
-                <div class="myimage-div"><img src="image/12.png" alt="image" width="20%"><ol>
-                    <li>Монотопные мономорфные экстрасистолы — один источник возникновения, постоянный интервал сцепления в одном и том же отведении, имеют одинаковую форму ЭКГ (даже при разной продолжительности комплекса QRS).</li>
-                    <li>Монотопные полиморфные экстрасистолы — один источник возникновения, постоянный интервал сцепления в одном и том же отведении, имеют разную форму.</li>
-                    <li>Политопные экстрасистолы — из нескольких эктопических очагов, различные интервалы сцепления в одном и том же отведении ЭКГ (различия составляют более 0,02—0,04 с), разные отличающиеся друг от друга по форме экстрасистолические комплексы.</li>
-                    <li>Неустойчивая пароксизмальная тахикардия — три и более следующих друг за другом экстрасистол (ранее обозначались как групповые, или залповые, экстрасистолы). Так же как и политопные экстрасистолы, свидетельствуют о выраженной электрической нестабильности миокарда.</li>
-                </ol>
             </section>
             <p><a name="vosp"></a></p>
             <header>
@@ -78,22 +72,14 @@
             <section>
                 <h4>Эндокардит</h4>
                 <p>Воспаление внутренней оболочки сердца — эндокарда. В большинстве случаев эндокардит не является самостоятельным заболеванием, а представляет собой частное проявление других заболеваний. Самостоятельное значение имеет подострый бактериальный эндокардит, вызываемый чаще стрептококком.</p>
-                <a href="#" class="ok-ssilka">Эндокардит</a>
-                <div class="ok-div"><img src="image/13.jpg" alt="image" width="20%"><p>Bartonella henselae бациллы в ткани сердечного клапана пациента с отрицательным посевом на эндокардит: бациллы выглядят как чёрные гранулы.</p>
             </section>
             <section>
                 <h4>Миокардит</h4>
                 <p>Поражение сердечной мышцы, миокарда. Обычно поражения носят воспалительный характер.</p>
-                <a href="#" class="ok-ssilka">Этиология</a>
-                <div class="ok-div"><img src="image/14.JPG" alt="image" width="15%"><p>Острый миокардит как самостоятельное заболевание описывается редко, чаще наблюдаются вторичные миокардиты в качестве осложнения инфекционных, инвазионных и токсических болезней, а также септических процессов.
-
-                    В зависимости от силы и особенностей инфекции, стадии процесса и сопротивляемости организма, перечисленные этиологические факторы вызывают различные по глубине и характеру поражения миокарда.</p>
             </section>
             <section>
                 <h4>Перикардит</h4>
                 <p>Воспалительное поражение серозной оболочки сердца, наиболее часто висцерального листка, возникающее как осложнение различных заболеваний, редко как самостоятельная болезнь. По этиологии выделяют инфекционные, аутоиммунные, травматические и идиопатические перикардиты. Морфологически проявляется увеличением объёма жидкости в полости перикарда, или образованием фиброзных стриктур, что приводит к затруднению работы сердца.</p>
-                <a href="#" class="ok-ssilka">Этиология</a>
-                <div class="ok-div"><img src="image/15.webp" alt="image" width="15%"><p>Причины развития заболевания многообразны. Нетравматический перикардит-обычное заболевание вторичного происхождения, которое выявляется, чаще всего, как осложнение при инфекционных заболеваниях, септических процессах. При наружных травмах груди причиной перикардита могут быть проникающие (осколки, щепки), реже непроникающие ранения грудной клетки (при травмах груди с переломом рёбер).</p>
             </section>
             <p><a href="#top">Назад</a></p>
             <footer>
