--- a/html_25.html
+++ b/html_25.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css\s25.css">
 </head>
 
-<body>
+<body link="white" vlink="white" alink="white">
     <header>
         <hr>
         <p><a name="top"></a></p>
@@ -17,13 +17,13 @@
         <hr>
     </header>
     <nav>
-        меню:
+        Меню:
         <p>
         <ul>
             <li><a href="https://ru.wikipedia.org/wiki/%D0%97%D0%B0%D0%B1%D0%BE%D0%BB%D0%B5%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F_%D1%81%D0%B5%D1%80%D0%B4%D1%86%D0%B0">wikipedia</a></li>
-            <li><a href="#narysh">Нарушения ритма и проводимости</a></li>
-            <li><a href="#vosp">Воспалительные заболевания сердца</a></li>
-            <li><a href="#istg">Источники информации</a></li>
+            <li><a href="#narysh"> Нарушения ритма и проводимости </a></li>
+            <li><a href="#vosp"> Воспалительные заболевания сердца </a></li>
+            <li><a href="#istg"> Источники информации </a></li>
         <hr>
         </ul>
         </p>
