--- a/html_25.html
+++ b/html_25.html
@@ -27,7 +27,6 @@
             <li><a href="#narysh"> Нарушения ритма и проводимости </a></li>
             <li><a href="#vosp"> Воспалительные заболевания сердца </a></li>
             <li><a href="#istg"> Источники информации </a></li>
-            <hr>
         </ul>
         </p>
     </nav>
@@ -74,7 +73,8 @@
                     быть расширен до 0,12 сек. и более.</p>
             </section>
         </article>
-        <article style="padding-left: 300px; padding-right: 300px;"">
+        <div style="height: 800px;">
+        <article style=" width: 28%; float: left; padding-left: 15%; padding-right: 1%;"">
             <header>
                 <h3>Фибрилляция</h3>
             </header>
@@ -104,7 +104,7 @@
             </section>
         </article>
         <p><a name="vosp"></a></p>
-        <article style="background-color:rgb(89, 67, 122) ; color: white; padding-left: 300px; padding-right: 300px;">
+        <article style=" width: 35%; float: left; background-color:rgb(89, 67, 122) ; color: white; padding-left: 1%; padding-right: 2%; padding-bottom: 20px; margin-right: 13%;">
             <header>
                 <h3>Воспалительные заболевания сердца</h3>
             </header>
@@ -129,14 +129,12 @@
                     затруднению работы сердца.</p>
             </section>
         </article>
-        <p><a href="#top">Назад</a></p>
+    </div>
         <footer>
-            <hr>
-            <h4>Источник информации</h4>
-            <address>
+            <h3 style="margin-top: 40px;">Источник информации</h3>
+            <address style="padding-left: 300px; padding-right: 300px;">
                 <p><a name="istg"></a></p>
-                <a
-                    href="https://ru.wikipedia.org/wiki/%D0%97%D0%B0%D0%B1%D0%BE%D0%BB%D0%B5%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F_%D1%81%D0%B5%D1%80%D0%B4%D1%86%D0%B0">wikipedia</a>
+                <a href="https://ru.wikipedia.org/wiki/%D0%97%D0%B0%D0%B1%D0%BE%D0%BB%D0%B5%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F_%D1%81%D0%B5%D1%80%D0%B4%D1%86%D0%B0">wikipedia</a>
                 <p>Аритмии сердца / Богословский В. А. // Большая медицинская энциклопедия : в 30 т. / гл. ред. Б. В.
                     Петровский. — 3-е изд. — М. : Советская энциклопедия, 1975. — Т. 2 : Антибиотики — Беккерель. — 608
                     с. : ил.</p>
